# coplot

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  setup.py  web-interface-spec.md
coplot/: __init__.py  __main__.py  r_session_worker.R  server.py
coplot/static/: app.js  index.html  styles.css
coplot_web/: server.py  session_worker.py
coplot_web/static/: app.js  index.html  styles.css
